--- a/nuttx/arch/arm/src/Makefile
+++ b/nuttx/arch/arm/src/Makefile
@@ -78,25 +78,24 @@ EXTRA_LIBPATHS ?=
 LINKLIBS ?=
 
 ifeq ($(CONFIG_WINDOWS_NATIVE),y)
-  BOARDDIR = $(dir "$(TOPDIR)\arch\$(CONFIG_ARCH)\src\board\Makefile")
+  BOARD_SRC = $(dir "$(TOPDIR)\configs\$(CONFIG_ARCH_BOARD)\src\Makefile")
   LIBPATHS += -L"${shell cygpath -w "$(TOPDIR)\lib"}"
-ifneq ($(BOARDDIR),)
-  LIBPATHS += -L"${shell cygpath -w $(BOARDDIR)}"
+ifneq ($(BOARD_SRC),)
+  LIBPATHS += -L"${shell cygpath -w $(BOARD_SRC)}"
 endif
 
 else
-  BOARDDIR = $(dir "$(TOPDIR)/arch/$(CONFIG_ARCH)/src/board/Makefile")
 
 ifeq ($(WINTOOL),y)
   LIBPATHS += -L"${shell cygpath -w "$(TOPDIR)/lib"}"
-ifneq ($(BOARDDIR),)
-  LIBPATHS += -L"${shell cygpath -w $(BOARDDIR)}"
+ifneq ($(BOARD_SRC),)
+  LIBPATHS += -L"${shell cygpath -w $(BOARD_SRC)}"
 endif
 
 else
   LIBPATHS += -L"(TOPDIR)/lib"
-ifneq ($(BOARDDIR),)
-  LIBPATHS += -L"$(BOARDDIR)"
+ifneq ($(BOARD_SRC),)
+  LIBPATHS += -L"$(BOARD_SRC)"
 endif
 endif
 endif
@@ -110,7 +109,7 @@ VPATH = chip:common:$(ARCH_SUBDIR)
 
 all: $(HEAD_OBJ) libarch$(LIBEXT)
 
-.PHONY: board/libboard$(LIBEXT)
+.PHONY: $(BOARD_SRC)/libboard$(LIBEXT)
 
 $(AOBJS) $(HEAD_OBJ): %$(OBJEXT): %.S
 	$(call ASSEMBLE, $<, $@)
@@ -121,10 +120,10 @@ $(COBJS): %$(OBJEXT): %.c
 libarch$(LIBEXT): $(OBJS)
 	$(call ARCHIVE, $@, "$(OBJS)")
 
-board/libboard$(LIBEXT):
-	$(Q) $(MAKE) -C board TOPDIR="$(TOPDIR)" libboard$(LIBEXT) EXTRADEFINES=$(EXTRADEFINES)
+$(BOARD_SRC)/libboard$(LIBEXT):
+	$(Q) $(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" libboard$(LIBEXT) EXTRADEFINES=$(EXTRADEFINES)
 
-nuttx: $(HEAD_OBJ) board/libboard$(LIBEXT)
+nuttx: $(HEAD_OBJ) $(BOARD_SRC)/libboard$(LIBEXT)
 	$(Q) echo "LD: nuttx"
 	$(Q) $(LD) --entry=__start $(LDFLAGS) $(LIBPATHS) $(EXTRA_LIBPATHS) \
 		-o $(NUTTX)$(EXEEXT) $(HEAD_OBJ) $(EXTRA_OBJS) \
@@ -137,7 +136,7 @@ nuttx: $(HEAD_OBJ) board/libboard$(LIBEXT)
 # Note that there may not be a head object if layout is handled
 # by the linker configuration.
 
-export_head: board/libboard$(LIBEXT) $(HEAD_OBJ)
+export_head: $(BOARD_SRC)/libboard$(LIBEXT) $(HEAD_OBJ)
 ifneq ($(HEAD_OBJ),)
 	$(Q) if [ -d "$(EXPORT_DIR)/startup" ]; then \
 	cp -f $(HEAD_OBJ) "$(EXPORT_DIR)/startup"; \
@@ -150,8 +149,8 @@ endif
 # Dependencies
 
 .depend: Makefile chip/Make.defs $(SRCS)
-ifneq ($(BOARDDIR),)
-	$(Q) $(MAKE) -C board TOPDIR="$(TOPDIR)" depend
+ifneq ($(BOARD_SRC),)
+	$(Q) $(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" depend
 endif
 	$(Q) $(MKDEP) --dep-path chip --dep-path common --dep-path $(ARCH_SUBDIR) \
 	 $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
@@ -160,15 +159,15 @@ endif
 depend: .depend
 
 clean:
-ifneq ($(BOARDDIR),)
-	$(MAKE) -C board TOPDIR="$(TOPDIR)" clean
+ifneq ($(BOARD_SRC),)
+	$(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" clean
 endif
 	$(Q) rm -f libarch$(LIBEXT) *~ .*.swp
 	$(call CLEAN)
 
 distclean: clean
-ifneq ($(BOARDDIR),)
-	$(MAKE) -C board TOPDIR="$(TOPDIR)" distclean
+ifneq ($(BOARD_SRC),)
+	$(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" distclean
 endif
 	$(Q) rm -f Make.dep .depend
 
