--- a/nuttx/arch/z80/src/Makefile.sdcc
+++ b/nuttx/arch/z80/src/Makefile.sdcc
@@ -69,9 +69,8 @@ DEPSRCS = $(CSRCS)
 # Directories
 
 ARCH_SRCDIR = $(TOPDIR)/arch/$(CONFIG_ARCH)/src
-BOARDDIR = $(TOPDIR)/arch/$(CONFIG_ARCH)/src/board
 
-VPATH = chip:common:board
+VPATH = chip:common:$(BOARD_SRC)
 
 # Libraries
 
@@ -86,7 +85,7 @@ HEAP_BASE = ${shell ./mkhpbase.sh}
 
 all: $(HEAD_OBJ) libarch$(LIBEXT)
 
-.PHONY: board/libboard$(LIBEXT)
+.PHONY: $(BOARD_SRC)/libboard$(LIBEXT)
 
 $(AOBJS) $(HEAD_OBJ): %$(OBJEXT): %$(ASMEXT)
 	$(call ASSEMBLE, $<, $@)
@@ -136,17 +135,17 @@ endif
 libarch$(LIBEXT): up_mem.h asm_mem.h $(OBJS)
 	$(call ARCHIVE, $@, "$(OBJS)")
 
-# This builds the libboard library in the board/ subdirectory 
+# This builds the libboard library in the $(BOARD_SRC)/ directory 
 
-board/libboard$(LIBEXT):
-	@$(MAKE) -C board TOPDIR="$(TOPDIR)" libboard$(LIBEXT) EXTRADEFINES=$(EXTRADEFINES)
+$(BOARD_SRC)/libboard$(LIBEXT):
+	@$(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" libboard$(LIBEXT) EXTRADEFINES=$(EXTRADEFINES)
 
 # This target builds the final executable
 
-pass1.hex: up_mem.h asm_mem.h $(SDCCLIBDIR)/myz80.lib $(HEAD_OBJ) board/libboard$(LIBEXT)
+pass1.hex: up_mem.h asm_mem.h $(SDCCLIBDIR)/myz80.lib $(HEAD_OBJ) $(BOARD_SRC)/libboard$(LIBEXT)
 	@echo "LD: pass1.hex"
 	@echo "--" >pass1.lnk				# Non-interactive
-	@echo "-k $(BOARDDIR)" >>pass1.lnk		# Path to board library
+	@echo "-k $(BOARD_SRC)" >>pass1.lnk		# Path to board library
 	@echo "-k $(SDCCLIBDIR)" >>pass1.lnk		# Path to SDCC z80 library
 	@echo "-l libboard$(LIBEXT)" >>pass1.lnk	# Name of board library
 	@for LIB in $(LINKLIBS); do \
@@ -176,10 +175,10 @@ endif
 	@$(MAKE) TOPDIR="$(TOPDIR)" libarch$(LIBEXT)
 	@$(MAKE) TOPDIR="$(TOPDIR)" $(HEAD_OBJ)
 
-nuttx.hex: up_mem.h asm_mem.h $(SDCCLIBDIR)/myz80.lib $(HEAD_OBJ) board/libboard$(LIBEXT)
+nuttx.hex: up_mem.h asm_mem.h $(SDCCLIBDIR)/myz80.lib $(HEAD_OBJ) $(BOARD_SRC)/libboard$(LIBEXT)
 	@echo "LD: nuttx.hex"
 	@echo "--" >nuttx.lnk				# Non-interactive
-	@echo "-k $(BOARDDIR)" >>nuttx.lnk		# Path to board library
+	@echo "-k $(BOARD_SRC)" >>nuttx.lnk		# Path to board library
 	@echo "-k $(SDCCLIBDIR)" >>nuttx.lnk		# Path to SDCC z80 library
 	@echo "-l libboard$(LIBEXT)" >>nuttx.lnk	# Name of board library
 	@for LIB in $(LINKLIBS); do \
@@ -217,7 +216,7 @@ endif
 
 # This is part of the top-level export target
 
-export_head: board/libboard$(LIBEXT) $(HEAD_OBJ)
+export_head: $(BOARD_SRC)/libboard$(LIBEXT) $(HEAD_OBJ)
 	@if [ -d "$(EXPORT_DIR)/startup" ]; then \
 		cp -f $(HEAD_OBJ) "$(EXPORT_DIR)/startup"; \
 	 else \
@@ -228,8 +227,8 @@ export_head: board/libboard$(LIBEXT) $(HEAD_OBJ)
 # Build dependencies
 
 .depend: Makefile up_mem.h asm_mem.h chip/Make.defs $(DEPSRCS)
-	@if [ -e board/Makefile ]; then \
-		$(MAKE) -C board TOPDIR="$(TOPDIR)" depend ; \
+	@if [ -e $(BOARD_SRC)/Makefile ]; then \
+		$(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" depend ; \
 	fi
 	@$(MKDEP) --dep-path chip --dep-path common $(CC) -- $(CFLAGS) -- $(DEPSRCS) >Make.dep
 	@touch $@
@@ -237,15 +236,15 @@ export_head: board/libboard$(LIBEXT) $(HEAD_OBJ)
 depend: .depend
 
 clean:
-	@if [ -e board/Makefile ]; then \
-		$(MAKE) -C board TOPDIR="$(TOPDIR)" clean ; \
+	@if [ -e $(BOARD_SRC)/Makefile ]; then \
+		$(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" clean ; \
 	fi
 	@rm -f libarch$(LIBEXT) up_mem.h asm_mem.h pass1.* nuttx.* *~ .*.swp
 	$(call CLEAN)
 
 distclean: clean
-	@if [ -e board/Makefile ]; then \
-		$(MAKE) -C board TOPDIR="$(TOPDIR)" distclean ; \
+	@if [ -e $(BOARD_SRC)/Makefile ]; then \
+		$(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" distclean ; \
 	fi
 	@rm -f Make.dep .depend
 
