Don't link $(ARCH_SRC)/chip -> $(TOPDIR)\$(ARCH_SRC)/$(CONFIG_ARCH_CHIP)
Don't link $(ARCH_SRC)/chip -> $(TOPDIR)\$(ARCH_SRC)/$(CONFIG_ARCH_CHIP) for all
architectures/configurations, tested with ARM

--- a/nuttx/Makefile
+++ b/nuttx/Makefile
@@ -66,6 +66,7 @@ ARCH_INC = $(ARCH_DIR)/include
 BOARD_DIR = configs/$(CONFIG_ARCH_BOARD)
 
 export BOARD_SRC = $(TOPDIR)/configs/$(CONFIG_ARCH_BOARD)/src
+export CHIP_SRC = $(TOPDIR)/arch/$(CONFIG_ARCH)/src/$(CONFIG_ARCH_CHIP)
 
 # Add-on directories.  These may or may not be in place in the
 # NuttX source tree (they must be specifically installed)
@@ -374,14 +375,6 @@ include/arch/board: include/arch Make.defs include/arch
 	@echo "LN: include/arch/board -> $(TOPDIR)/$(BOARD_DIR)/include"
 	$(Q) $(DIRLINK) $(TOPDIR)/$(BOARD_DIR)/include include/arch/board
 
-# Link arch/<arch-name>/include/<chip-name> to arch/<arch-name>/include/chip
-
-$(ARCH_SRC)/chip: Make.defs
-ifneq ($(CONFIG_ARCH_CHIP),)
-	@echo "LN: $(ARCH_SRC)/chip -> $(TOPDIR)\$(ARCH_SRC)/$(CONFIG_ARCH_CHIP)"
-	$(Q) $(DIRLINK) $(TOPDIR)/$(ARCH_SRC)/$(CONFIG_ARCH_CHIP) $(ARCH_SRC)/chip
-endif
-
 # Link arch/<arch-name>/src/<chip-name> to arch/<arch-name>/src/chip
 
 include/arch/chip: include/arch Make.defs
@@ -390,7 +383,7 @@ ifneq ($(CONFIG_ARCH_CHIP),)
 	$(Q) $(DIRLINK) $(TOPDIR)/$(ARCH_INC)/$(CONFIG_ARCH_CHIP) include/arch/chip
 endif
 
-dirlinks: include/arch include/arch/board include/arch/chip $(ARCH_SRC)/chip include/apps
+dirlinks: include/arch include/arch/board include/arch/chip include/apps
 
 # context
 #
@@ -417,7 +410,6 @@ clean_context:
 	$(Q) $(DIRUNLINK) include/arch/board
 	$(Q) $(DIRUNLINK) include/arch/chip
 	$(Q) $(DIRUNLINK) include/arch
-	$(Q) $(DIRUNLINK) $(ARCH_SRC)/chip
 	$(Q) $(DIRUNLINK) include/apps
 
 # check_context
