--- a/nuttx/arch/z80/src/Makefile
+++ b/nuttx/arch/z80/src/Makefile
@@ -37,7 +37,7 @@
 # Makefile fragments
 
 -include $(TOPDIR)/Make.defs
--include chip/Make.defs
+-include $(CHIP_SRC)/Make.defs
 -include $(BOARD_SRC)/Make.defs
 
 ############################################################################
