--- a/nuttx/configs/demo9s12ne64/src/Makefile
+++ b/nuttx/configs/demo9s12ne64/src/Makefile
@@ -51,10 +51,10 @@ OBJS		= $(AOBJS) $(COBJS)
 
 ARCH_SRCDIR	= $(TOPDIR)/arch/$(CONFIG_ARCH)/src
 ifeq ($(WINTOOL),y)
-  CFLAGS	+= -I "${shell cygpath -w $(ARCH_SRCDIR)/chip}" \
+  CFLAGS	+= -I "${shell cygpath -w $(CHIP_SRC)}" \
   		   -I "${shell cygpath -w $(ARCH_SRCDIR)/common}"
 else
-  CFLAGS	+= -I$(ARCH_SRCDIR)/chip -I$(ARCH_SRCDIR)/common
+  CFLAGS	+= -I$(CHIP_SRC) -I$(ARCH_SRCDIR)/common
 endif
 
 all: libboard$(LIBEXT)
