--- a/nuttx/arch/sh/src/Makefile
+++ b/nuttx/arch/sh/src/Makefile
@@ -34,10 +34,10 @@
 ############################################################################
 
 -include $(TOPDIR)/Make.defs
--include chip/Make.defs
+-include $(CHIP_SRC)/Make.defs
 
 ARCH_SRCDIR = $(TOPDIR)/arch/$(CONFIG_ARCH)/src
-CFLAGS += -I$(ARCH_SRCDIR)/chip -I$(ARCH_SRCDIR)/common -I$(TOPDIR)/sched
+CFLAGS += -I$(CHIP_SRC) -I$(ARCH_SRCDIR)/common -I$(TOPDIR)/sched
 
 HEAD_OBJ = $(HEAD_ASRC:.S=$(OBJEXT))
 
@@ -81,7 +81,7 @@ LDLIBS = $(patsubst %.a,%,$(patsubst lib%,-l%,$(LINKLIBS)))
 
 LIBGCC = ${shell $(CC) $(ARCHCPUFLAGS) -print-libgcc-file-name}
 
-VPATH = chip:common
+VPATH = $(CHIP_SRC):common
 
 all: $(HEAD_OBJ) libarch$(LIBEXT)
 
@@ -119,11 +119,11 @@ export_head: $(BOARD_SRC)/libboard$(LIBEXT) $(HEAD_OBJ)
 
 # Dependencies
 
-.depend: Makefile chip/Make.defs $(SRCS)
+.depend: Makefile $(CHIP_SRC)/Make.defs $(SRCS)
 ifneq ($(BOARD_SRC),)
 	$(Q) $(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" depend
 endif
-	$(Q) $(MKDEP) --dep-path chip --dep-path common $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
+	$(Q) $(MKDEP) --dep-path $(CHIP_SRC) --dep-path common $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
 	$(Q) touch $@
 
 depend: .depend
