--- a/nuttx/arch/x86/src/Makefile
+++ b/nuttx/arch/x86/src/Makefile
@@ -34,7 +34,7 @@
 ############################################################################
 
 -include $(TOPDIR)/Make.defs
--include chip/Make.defs
+-include $(CHIP_SRC)/Make.defs
 
 ARCH_SRCDIR = $(TOPDIR)/arch/$(CONFIG_ARCH)/src
 ifeq ($(CONFIG_ARCH_I486),y)
@@ -43,13 +43,13 @@ endif
 
 ifeq ($(WINTOOL),y)
   NUTTX = "${shell cygpath -w $(TOPDIR)/nuttx}"
-  CFLAGS += -I "${shell cygpath -w $(ARCH_SRCDIR)/chip}" \
+  CFLAGS += -I "${shell cygpath -w $(CHIP_SRC)}" \
 		-I "${shell cygpath -w $(ARCH_SRCDIR)/common}" \
 		-I "${shell cygpath -w $(ARCH_SRCDIR)/$(ARCH_SUBDIR)}" \
 		-I "${shell cygpath -w $(TOPDIR)/sched}"
 else
   NUTTX = $(TOPDIR)/nuttx
-  CFLAGS += -I$(ARCH_SRCDIR)/chip -I$(ARCH_SRCDIR)/common \
+  CFLAGS += -I$(CHIP_SRC) -I$(ARCH_SRCDIR)/common \
 		-I$(ARCH_SRCDIR)/$(ARCH_SUBDIR) -I$(TOPDIR)/sched
 endif
 
@@ -103,7 +103,7 @@ ifeq ($(HOSTOS),FreeBSD)
   endif
 endif
 
-VPATH = chip:common:$(ARCH_SUBDIR)
+VPATH = $(CHIP_SRC):common:$(ARCH_SUBDIR)
 
 all: $(HEAD_OBJ) libarch$(LIBEXT)
 
@@ -141,11 +141,11 @@ export_head: $(BOARD_SRC)/libboard$(LIBEXT) $(HEAD_OBJ)
 
 # Dependencies
 
-.depend: Makefile chip/Make.defs $(SRCS)
+.depend: Makefile $(CHIP_SRC)/Make.defs $(SRCS)
 ifneq ($(BOARD_SRC),)
 	$(Q) $(MAKE) -C $(BOARD_SRC) TOPDIR="$(TOPDIR)" depend
 endif
-	$(Q) $(MKDEP) --dep-path chip --dep-path common --dep-path $(ARCH_SUBDIR) \
+	$(Q) $(MKDEP) --dep-path $(CHIP_SRC) --dep-path common --dep-path $(ARCH_SUBDIR) \
 	 $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
 	$(Q) touch $@
 
